fix last compiler warnings
https://github.com/qos-ch/logback/commit/a2be75b99