@@ -119,7 +119,7 @@ public class NestedComplexPropertyIA extends ImplicitAction {
             + "] for [" + localName + "] property");
       }
 
-      actionData.setNestedComplexProperty(componentClass.newInstance());
+      actionData.setNestedComplexProperty(componentClass.getConstructor().newInstance());
 
       // pass along the repository
       if (actionData.getNestedComplexProperty() instanceof ContextAware) {
